# Neuromorphic-Robot-Control

./: .gitignore  CLEANUP_SUMMARY.md  COMPLETE_SL_LAGONN_MPC_QP_GUIDE.md  PHASE_4_5_COMPLETION.md  PROJECT_STATUS.md  QUICK_START_GUIDE.md  QUICK_START_REAL_INTEGRATION.md  README.md  REAL_DATA_DOWNLOAD_GUIDE.md  REPO_STRUCTURE.md  SNN_MPC_Complete_Derivation.md  arm.py  arm_mpc.py  arm_mpc_log.csv  debug_reset.py  download_real_lsmo.py  download_smolvla_model.py  fix_tests.py  generate_summary.py  interactive_arm.py  load_lsmo.py  mpc_log.csv  neuromorphic_mpc_sl_oscillators.md  neuromorphic_qp_mpc_derivation.md  quick_fix.py  quick_test_format.py  requirements.txt  run_benchmarks_with_server.sh  run_full_validation.py  run_pick_and_place.sh  test_model_quick.py  test_mpc_funcs.py  test_server_direct.py  test_smolvla_lerobot.py  test_smolvla_load.py
assets/: arm2dof.xml  arm3dof.xml  xarm_6dof.xml
config/: config.yaml  logging.yaml
docs/: 01-QUICKSTART.md  02-GETTING_STARTED.md  03-SOLVERS.md  04-TESTING.md  05-VISUALIZATION.md  06-BENCHMARKING.md  07-THEORY.md  3darm_smolvla_sl_mpc_techspec.md  ADAPTIVE_MPC_ARCHITECTURE.md  BENCHMARK_VALIDATION_AUDIT.md  COMPLETE_SYSTEM_ARCHITECTURE_GUIDE.md  DATASET_AUDIT_FINDINGS.md  DATA_GUIDE.md  PLAN.md  (+34 more)
install/ros2_arm_viz/share/ros2_arm_viz/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_arm_viz/share/ros2_arm_viz/launch/: display_arm_mpc.launch.py
install/ros2_arm_viz/share/ros2_arm_viz/rviz/: planar_arm.rviz
install/ros2_arm_viz/share/ros2_arm_viz/urdf/: planar_arm_2dof.urdf
(+404 files in other folders)
